# ray-tracing-in-one-weekend-rs

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  dielectric.rs  hittable.rs  hittables.rs  lambertian.rs  main.rs  material.rs  materials.rs  math.rs  metal.rs  ray.rs  sphere.rs  textures.rs  vec3.rs
src/hittables/: aabb.rs  box.rs  bvh_node.rs  bvh_tree.rs  constant_medium.rs  hit.rs  hit_record.rs  hittable.rs  hittable_vec.rs  moving_sphere.rs  rect.rs  rotate.rs  sphere.rs  translate.rs  xy_rect.rs
src/materials/: dielectric.rs  diffuse_light.rs  lambertian.rs  material.rs  metal.rs  scatter.rs
src/textures/: checker_texture.rs  image_texture.rs  noise_texture.rs  perlin.rs  solid_color.rs  texture.rs
