[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["approx-trigonometry", "parallel"]
approx-trigonometry = []
parallel = ["rayon"]

[dependencies]
anyhow = "1.0.66"
cfg-if = "1.0.0"
image = "0.24.5"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = { version = "1.5.3", optional = true }
